--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://www.itguild.org.ua">
     <meta property="og:description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="images/logo.png">
+    <meta property="og:image" content="//images/og-logo.png">
     %sapper.styles%
     %sapper.head%
 </head>
