--- a/src/template.html
+++ b/src/template.html
@@ -10,12 +10,18 @@
     <link rel='icon' type='image/png' href='images/logo.png' >
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel='stylesheet' href='global.css'>
+    <!--  Generic meta tags  -->
     <meta property="og:title" content="Маніфест · Гільдія ІТ Фахівців України">
     <meta property="og:site_name" content="Гільдія ІТ Фахівців України">
     <meta property="og:url" content="https://www.itguild.org.ua">
     <meta property="og:description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://www.itguild.org.ua/images/og-logo.png">
+    <!--  Twitter meta tags  -->
+    <meta property="twitter:url" content="https://www.itguild.org.ua">
+    <meta property="twitter:title" content="Маніфест · Гільдія ІТ Фахівців України">
+    <meta property="twitter:description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
+    <meta property="twitter:image" content="https://www.itguild.org.ua/images/og-logo.png">
     %sapper.styles%
     %sapper.head%
 </head>
