--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,8 @@
     <link rel='icon' type='image/png' href='images/logo.png' >
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel='stylesheet' href='global.css'>
+    <meta property="title" content="Маніфест · Гільдія ІТ Фахівців України">
+    <meta property="description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
     <!--  Generic meta tags  -->
     <meta property="og:title" content="Маніфест · Гільдія ІТ Фахівців України">
     <meta property="og:site_name" content="Гільдія ІТ Фахівців України">
