Add twitter card meta tag

--- a/src/template.html
+++ b/src/template.html
@@ -20,6 +20,7 @@
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://www.itguild.org.ua/images/og-logo.png">
     <!--  Twitter meta tags  -->
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.itguild.org.ua">
     <meta property="twitter:title" content="Маніфест · Гільдія ІТ Фахівців України">
     <meta property="twitter:description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
