--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
 
     %sapper.base%
 
-    <link rel='icon' type='image/png' href='images/logo.png' >
+    <link rel='icon' type='image/png' href='images/favicon.png' >
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel='stylesheet' href='global.css'>
     <meta property="title" content="Маніфест · Гільдія ІТ Фахівців України">
