--- a/src/template.html
+++ b/src/template.html
@@ -10,10 +10,10 @@
     <link rel='icon' type='image/png' href='images/favicon.png' >
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel='stylesheet' href='global.css'>
-    <meta property="title" content="Маніфест · Гільдія ІТ Фахівців України">
+    <meta property="title" content="Маніфест">
     <meta property="description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
     <!--  Generic meta tags  -->
-    <meta property="og:title" content="Маніфест · Гільдія ІТ Фахівців України">
+    <meta property="og:title" content="Маніфест">
     <meta property="og:site_name" content="Гільдія ІТ Фахівців України">
     <meta property="og:url" content="https://www.itguild.org.ua">
     <meta property="og:description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
@@ -22,7 +22,7 @@
     <!--  Twitter meta tags  -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.itguild.org.ua">
-    <meta property="twitter:title" content="Маніфест · Гільдія ІТ Фахівців України">
+    <meta property="twitter:title" content="Маніфест">
     <meta property="twitter:description" content="Наша мета — представляти та захищати інтереси ІТ фахівців перед державою та бізнесом.">
     <meta property="twitter:image" content="https://www.itguild.org.ua/images/og-logo.png">
     %sapper.styles%
